--- a/Simple_CSharp_Games/Pages/FinalBattlePage.razor.css
+++ b/Simple_CSharp_Games/Pages/FinalBattlePage.razor.css
@@ -1,12 +1,11 @@
-﻿.fountain-game-page {
-    background-color: #1a1a2e;
+﻿.battle-game-page {
+        background-color: #1a1a2e;
     min-height: 100vh;
     margin: 0;
     padding: 0;
     color: white;
     padding-left: 0 !important;
     padding-right: 0 !important;
-    padding: 3rem 1rem;
 }
 
 .hero-section {
@@ -15,6 +14,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    padding: 3rem 1rem;
 }
 
 .hero-section-content {
