--- a/Simple_CSharp_Games/Games/FinalBattleGame.razor.css
+++ b/Simple_CSharp_Games/Games/FinalBattleGame.razor.css
@@ -13,12 +13,9 @@
 }
 
 .battle-avatar-image {
-    height: 200px;
+    max-height: 200px;
     width: auto;
     margin: .5rem;
-/*    border: 2px solid white;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);*/
 }
 
 
@@ -26,6 +23,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+    width: 60%;
     margin-bottom: .5rem;
+}
+
+.battle-winner-container,
+.battle-messages-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
