--- a/Simple_CSharp_Games/Games/FinalBattleGame.razor.css
+++ b/Simple_CSharp_Games/Games/FinalBattleGame.razor.css
@@ -34,3 +34,11 @@
     justify-content: center;
     align-items: center;
 }
+
+.hero-input-container,
+.hero-actionChoice-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
