--- a/Simple_CSharp_Games/Pages/ManticorePage.razor.css
+++ b/Simple_CSharp_Games/Pages/ManticorePage.razor.css
@@ -29,7 +29,7 @@
 
 .hero-section-text {
     text-align: center;
-    width: fit-content;
+    width: 100%;
     margin-bottom: 1rem;
 }
 
@@ -39,7 +39,7 @@
     line-height: 1.6;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.75);
     color: #eaeaea;
-    margin: 0.5rem 0;
+    margin: 0.5rem;
 }
 
 
