Manticore: - altered game description text to stop gutters in dpeloyed version

--- a/Simple_CSharp_Games/Pages/ManticorePage.razor
+++ b/Simple_CSharp_Games/Pages/ManticorePage.razor
@@ -36,10 +36,11 @@
 
 
 
-	private string GameDescription1 = "Hunting the Manticore is a solo game to defend your city from an airborne assault.";
-	private string GameDescription2 = "Each round, guess the ship’s distance and fire a shot from your enchanted cannon.";
-	private string GameDescription3 = "After firing, you’ll be told if your shot fell short, went long, or hit its target.";
-	private string GameDescription4 = "Each turn the Manticore survives, it strikes the city for 1 point of damage.";
+	private string GameDescription1 = "Defend your city from the Manticore’s airborne assault.";
+	private string GameDescription2 = "Guess its distance and fire your enchanted cannon.";
+	private string GameDescription3 = "After each shot, you’ll learn if it fell short, long, or hit.";
+	private string GameDescription4 = "Each turn it survives, the Manticore damages the city.";
+
 
 
 	private void ShowIntro()
